[package]
name = "visual-metronome"
version = "0.1.0"
authors = ["Fumiaki Kinoshita <fumiexcel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "visual_metronome"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
baseplug = { git = "https://github.com/wrl/baseplug.git", rev = "9cec68f31cca9c0c7a1448379f75d92bbbc782a8" }
baseview = { git = "https://github.com/RustAudio/baseview.git", rev = "e7a6c661eff90000b5a62d28fb8e1eec3997d2aa" }
chrono = "*"
iced =  { version = "0.3", features = ["canvas", "tokio", "debug"] }
iced_audio = "0.7"
iced_baseview = { git = "https://github.com/BillyDM/iced_baseview", branch="main", features=["canvas"] }
iced_wgpu = "0.4"
raw-window-handle = "0.3"
serde = { version = "1.0", features = ["derive"] }
vst = "0.2"

